hphp/test/zend/good/tests/classes/property_override_publicStatic_protectedStatic.php.expectf

Fatal error: Access level to B::$p() must be public (as in class A) or weaker in %s/property_override_publicStatic_protectedStatic.php on line 11
